Readded remove filter buttons

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         <!-- Search input added here -->
         <input type="text" id="effects-search" placeholder="Search effects...">
         <ul id="effects-list"></ul>
+        <!-- Add the Remove Filters button below the effects list -->
+        <button id="remove-filters" class="reset-button">Remove Filters</button>
     </aside>
 
 </div>
