Added credits, adjusted overflow in effects list, adjusted misalignment in containers

--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
 <body>
 <!-- Main container for the content and sidebar -->
 <div class="content-container">
+
     <!-- Sidebar for the total summary -->
     <aside id="summary-sidebar">
-        <h2>Total Stats Summary</h2>
+        <h2>Total Stats</h2>
         <div id="total-stats">No effects selected or parsed.</div>
         <button id="reset-all" class="reset-button">Reset All</button>
+        <!-- Credits text outside the sidebar -->
+        <div class="credits-outside">
+            <p><strong>Uncle Zhou</strong> and <strong>Zara</strong> (e92) made this. You're welcome.</p>
+        </div>
     </aside>
+
+
 
     <!-- Main container for the table -->
     <div class="table-container">
