--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 <!-- Button to generate shareable link -->
 <button id="generate-shareable-link" class="reset-button">Generate Shareable Link</button>
 
+<!-- Text area to display the generated shareable link -->
+<textarea id="shareable-link-field" readonly style="width: 100%; display: none; margin-top: 10px;"></textarea>
+
+<!-- Button to copy the link to clipboard -->
+<button id="copy-link-button" class="reset-button" style="display: none; margin-top: 10px;">Copy Link</button>
+
+
 <div class="credits-outside">
             <p><strong>Uncle Zhou</strong> and <strong>Zara</strong> (e92) made this. You're welcome.</p>
         </div>
