100% width hiding in html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <button id="generate-shareable-link" class="reset-button">Generate Shareable Link</button>
 
 <!-- Text area to display the generated shareable link -->
-<textarea id="shareable-link-field" readonly style="width: 100%; display: none; margin-top: 10px;"></textarea>
+<textarea id="shareable-link-field" readonly style="display: none; margin-top: 10px;"></textarea>
 
 <!-- Button to copy the link to clipboard -->
 <button id="copy-link-button" class="reset-button" style="display: none; margin-top: 10px;">Copy Link</button>
